@startuml
'https://plantuml.com/class-diagram
skinparam packageStyle rectangle
hide class members
package travelactivitytype{
class TravelActivity
class Food
class Landmark
class Accommodation
class TravelActivityList
}
Food --|> TravelActivity
Landmark --|> TravelActivity
Accommodation --|> TravelActivity
TravelActivityList --> "*" TravelActivity
TravelActivityList --> ui
parser --> TravelActivityList
package ui{

}

package parser{

}
@enduml